Llamada por @import a un archivo less copiado al tema desde el deault-theme

--- a/client/styles/main.less
+++ b/client/styles/main.less
@@ -5,3 +5,6 @@
 
 // Override any variables from the default theme
 @navbar-default-bg: #ff0000;
+
+// Llamamos a nuestro base.less
+@import "navbar.less";
