Añadidos base.less y navbar.less en el tema y modificados algunos colores

--- a/client/styles/navbar.less
+++ b/client/styles/navbar.less
@@ -36,7 +36,7 @@
 .rui.navbar .menu {
   .flex(1 1 auto);
   margin: 0 10px;
-  background:blue;
+  background:#152a38;
 }
 
 .rui.navbar .rui.tagnav {
