--- a/client/styles/main.less
+++ b/client/styles/main.less
@@ -4,7 +4,9 @@
 @import "{}/imports/plugins/included/default-theme/client/styles/main.less";
 
 // Override any variables from the default theme
-@navbar-default-bg: #ff0000;
+@navbar-default-bg: #152a38;
+@body-bg: #d1d4c9;
 
-// Llamamos a nuestro base.less
+// Override any less files from the default theme
 @import "navbar.less";
+@import "base.less";
