Maquetado el dropdown del login para todas las resoluciones

--- a/client/styles/main.less
+++ b/client/styles/main.less
@@ -6,7 +6,13 @@
 // Override any variables from the default theme
 @navbar-default-bg: #152a38;
 @body-bg: #d1d4c9;
+@product-overlay-text: #152a38;
+@link-color: #fde9c9;
 
 // Override any less files from the default theme
 @import "navbar.less";
 @import "base.less";
+
+@import "products/productGrid.less";
+@import "dashboard/console.less";
+@import "accounts/accounts.less";
