--- a/client/styles/navbar.less
+++ b/client/styles/navbar.less
@@ -210,8 +210,9 @@
 }
 
 .rui.navbar .accounts .dropdown-menu {
-  border: 1px solid @dropdown-border;
+  /*border: 1px solid @dropdown-border;*/
   margin-top: 0;
+  background: #152a38;
   .right(0);
   .left(auto);
 }
