--- a/client/styles/base.less
+++ b/client/styles/base.less
@@ -26,7 +26,7 @@ main {
 
 /* RESPONSIVE CSS
 -------------------------------------------------- */
-@media only screen and (max-width: 320px) {
+@media only screen and (min-width:320px) and (max-width: 320px) {
   body {
     font-size: @font-size-small;
   }
@@ -36,9 +36,27 @@ main {
   h2 {
     font-size: floor((@font-size-base * 1.7));
   }
+  .cart-icon{
+	display:none;
+  }
 }
 
 @media only screen and (max-width: 768px) {
+  body {
+    font-size: @font-size-small;
+  }
+  h1 {
+    font-size: floor((@font-size-base * 2.15));
+  }
+  h2 {
+    font-size: floor((@font-size-base * 1.7));
+  }  
+  .cart-icon{
+	display:none;
+  }
+}
+
+@media only screen and (max-width: 1024px) {
   body {
     font-size: @font-size-small;
   }
