Aplicados estilos para el dropdown de usuario logueado y barra lateral vertical ocultada

--- a/client/styles/navbar.less
+++ b/client/styles/navbar.less
@@ -196,7 +196,7 @@
 .rui.navbar .accounts .dropdown .dropdown-apps-icon a {
   display: flex;
   align-items: center;
-  color: @gray;
+  color: @link-color;
   text-decoration: none;
   padding: 5px 0;
   min-height: 44px;
@@ -210,7 +210,7 @@
 }
 
 .rui.navbar .accounts .dropdown-menu {
-  /*border: 1px solid @dropdown-border;*/
+  border: 0px solid @dropdown-border;
   margin-top: 0;
   background: #152a38;
   .right(0);
