--- a/client/styles/main.less
+++ b/client/styles/main.less
@@ -16,3 +16,4 @@
 @import "products/productGrid.less";
 @import "dashboard/console.less";
 @import "accounts/accounts.less";
+@import "dropdowns.less";
