--- a/client/styles/main.less
+++ b/client/styles/main.less
@@ -8,6 +8,9 @@
 @body-bg: #d1d4c9;
 @product-overlay-text: #152a38;
 @link-color: #fde9c9;
+@cart-icon-bg: #556e53;
+@cart-icon-badge: @cart-icon-bg;
+@cart-icon-padding:	15px 20px 10px 15px;
 
 // Override any less files from the default theme
 @import "navbar.less";
@@ -17,3 +20,4 @@
 @import "dashboard/console.less";
 @import "accounts/accounts.less";
 @import "dropdowns.less";
+@import "cart/cartIcon.less";
