--- a/client/styles/navbar.less
+++ b/client/styles/navbar.less
@@ -213,6 +213,7 @@
   border: 0px solid @dropdown-border;
   margin-top: 0;
   background: #152a38;
+  min-width:320px;
   .right(0);
   .left(auto);
 }
