Cambio de descripción en README.md y añadidos algunos estilos

--- a/client/styles/base.less
+++ b/client/styles/base.less
@@ -25,7 +25,8 @@ main {
   z-index: 9999;
 }
 
-/* RESPONSIVE CSS
+/* RESPONSIVE CSS (if there is no orientation explicit,
+it is by default "portrait")
 -------------------------------------------------- */
 @media only screen and (max-width: 320px) {
   body {
@@ -41,6 +42,12 @@ main {
   .cart-icon{
 	display:none;
   }
+}
+
+@media only screen and (max-width: 320px) and (orientation:landscape) {
+	body{
+		background-color:yellow;
+	}
 }
 
 @media only screen and (max-width: 768px) {
@@ -59,6 +66,12 @@ main {
   }
 }
 
+@media only screen and (max-width: 768px) and (orientation:landscape) {
+	body{
+		background-color:yellow;
+	}
+}
+
 @media only screen and (max-width: 1024px) {
   body {
     font-size: @font-size-small;
@@ -69,6 +82,12 @@ main {
   h2 {
     font-size: floor((@font-size-base * 1.7));
   }
+}
+
+@media only screen and (max-width: 1024px) and (orientation:landscape) {
+	body{
+		background-color:yellow;
+	}
 }
 
 /* Special fix for bootstrap modal see: https://github.com/twbs/bootstrap/issues/9855 */
