Cambios en el archivoREADME.md y algunos estilos nuevos para los productos

--- a/client/styles/main.less
+++ b/client/styles/main.less
@@ -11,6 +11,7 @@
 @cart-icon-bg: #556e53;
 @cart-icon-badge: @cart-icon-bg;
 @cart-icon-padding:	15px 20px 10px 15px;
+@product-item-image-border: 2px solid #999;
 
 // Override any less files from the default theme
 @import "navbar.less";
