--- a/client/styles/products/productGrid.less
+++ b/client/styles/products/productGrid.less
@@ -125,6 +125,7 @@
   .product-grid-item-images {
     width: 100%;
     height: 325px;
+    border: @product-item-image-border;
 
     overflow: hidden;
   }
