Ambas filas de artículos maquetadas

--- a/client/styles/base.less
+++ b/client/styles/base.less
@@ -10,10 +10,12 @@ main {
   // padding: 20px 60px 135px 60px;
   // padding: 20px 0 135px
   background-color: @body-bg;
+  height:100vh;
 }
 
 .container-main {
   padding: 20px 60px 20px 60px;
+  margin-bottom:-70px;
 
   @media only screen and (max-width: @screen-sm-max) {
     padding: 20px;
@@ -121,7 +123,17 @@ h3 {
   font-weight: @headings-font-weight-h3;
 }
 
+#main .container-fluid{
 
+}
+
+.mercado_title{
+padding-top:10px;
+margin-bottom:-15px;
+font-size:18px;
+text-align:center;
+font-size:bold;
+}
 
 /* Badge Colors
 // Contextual variations of badges
