--- a/client/styles/products/productGrid.less
+++ b/client/styles/products/productGrid.less
@@ -11,6 +11,9 @@
   .flex-wrap(wrap);
   .flex-direction(row);
   .justify-content(flex-start);
+
+  height:40vh;
+  margin-bottom:20px;
 }
 
 
@@ -55,8 +58,13 @@
   -webkit-box-shadow: 0 0 1px 1px @gray-lighter inset;
   -moz-box-shadow: 0 0 1px 1px @gray-lighter inset;
   box-shadow: 0 0 1px 1px @gray-lighter inset;
+  height:100%;
 
   .display(flex);
+}
+
+.product-grid-item a.product-grid-item-images{
+height:100%;
 }
 
 .product-primary-images {
