--- a/client/styles/navbar.less
+++ b/client/styles/navbar.less
@@ -50,7 +50,7 @@
 }
 
 .rui.navbar .rui.tagnav.vertical {
-  background: @white;
+  background: #152a38;
 }
 
 .rui.navbar .rui.tagnav.vertical .rui.tag.link {
