--- a/client/styles/products/productGrid.less
+++ b/client/styles/products/productGrid.less
@@ -13,7 +13,7 @@
   .justify-content(flex-start);
 
   height:40vh;
-  margin-bottom:20px;
+  margin-bottom:33px;
 }
 
 
@@ -38,6 +38,7 @@
   font-size: @font-size-base;
   font-weight: 400;
   text-align: center;
+  font-size:13px;
 }
 
 
@@ -177,7 +178,7 @@ height:100%;
       max-width: 100%;
 
       .product-grid-item-images {
-        height: 225px;
+	    height: 30vh;
       }
     }
   }
