Nuevos estilos en el menú dropdown de los idiomas

--- a/client/styles/base.less
+++ b/client/styles/base.less
@@ -84,6 +84,10 @@ it is by default "portrait")
   h2 {
     font-size: floor((@font-size-base * 1.7));
   }
+
+  .rui.navbar .languages .dropdown-menu{
+  min-width: 181px;
+  }
 }
 
 @media only screen and (max-width: 1023px) and (orientation:landscape) {
